--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["Johnson <johnson@satnusa.com>"]
 [tool.poetry.dependencies]
 python = "^3.10"
 Django = "3.2.10"
+django-easy-audit = "^1.3.3"
+django-crum = "^0.7.9"
 
 [tool.poetry.dev-dependencies]
 black = "^22.8.0"
