--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,10 @@ python = "^3.10"
 Django = "3.2.10"
 django-easy-audit = "^1.3.3"
 django-crum = "^0.7.9"
+djangorestframework = "^3.13.1"
+psycopg2-binary = "^2.9.3"
+openpyxl = "^3.0.10"
+django-cors-headers = "^3.13.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.8.0"
