--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,9 @@ django-easy-audit = "^1.3.3"
 django-crum = "^0.7.9"
 djangorestframework = "^3.13.1"
 psycopg2-binary = "^2.9.3"
-openpyxl = "^3.0.10"
 django-cors-headers = "^3.13.0"
+isort = "^5.10.1"
+openpyxl = "^3.0.10"
 
 [tool.poetry.dev-dependencies]
 black = "^22.8.0"
