--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ psycopg2-binary = "^2.9.3"
 django-cors-headers = "^3.13.0"
 isort = "^5.10.1"
 openpyxl = "^3.0.10"
+django-filter = "^22.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.8.0"
