--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ django-filter = "^22.1"
 django-pivot = "^1.9.0"
 gunicorn = "^20.1.0"
 gevent = "^21.12.0"
+whitenoise = "^6.2.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.8.0"
